@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-31 15:34:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-23
+
+    Summary:
+      Updated numbers; 40 tests OK
+    Revision:
+      missingexts--head--0.7--patch-23
+
+
+    modified files:
+     ChangeLog Python/Objects.hs testsrc/Objectstest.hs
+
+
 2005-01-31 02:44:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-22
 
     Summary:
